[package]
name = "pv_checker"
version = "0.1.0"
authors = ["wgjak47 <ak47m61@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
serde = { version = "1.0", features= ["derive"] }
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
shellexpand = "2.0.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
serde_json = "1.0"
async-trait = "0.1.41"
futures = "0.3.0"
