[package]
name = "pv_checker"
version = "0.1.1"
authors = ["wgjak47 <ak47m61@gmail.com>"]
edition = "2018"
description = "a tools to help you check the new version of the packages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9"
serde = { version = "1.0", features= ["derive"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "unicode", "cargo"] }
shellexpand = "3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.24", features = ["full"] }
url = "2.3"
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
